# gh-grust

./: .gitignore  Cargo.toml  README.md  SPECSHEAT.md  build.rs  build.sh
.github/: copilot-instructions.md
.github/workflows/: build.yml  release.yml
data/: fox.yml  rat.json
src/: main.rs
src/command/: grust.rs  mod.rs
src/command/gui_a/: app.rs  cmd.rs  mod.rs
src/command/gui_b/: app.rs  cmd.rs  mod.rs
src/command/gui_c/: cmd.rs  main.slint  mod.rs
src/command/gui_d/: app.rs  cmd.rs  mod.rs
src/command/gui_e/: app.rs  cmd.rs  mod.rs
src/command/gui_f/: app.rs  cmd.rs  mod.rs
src/command/gui_g/: cmd.rs  mod.rs
src/command/gui_h/: cmd.rs  mod.rs
src/command/gui_i/: cmd.rs  mod.rs
src/command/gui_j/: cmd.rs  mod.rs
src/command/gui_k/: cmd.rs  mod.rs
src/common/: commandnode.rs  gui_runtime.rs  mod.rs
