[package]
name = "gh-grust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# clap: コマンドライン引数のパース用（最新版を使用）
clap = "4.5"
# serde: データのシリアライズ/デシリアライズ用の基盤
serde = { version = "1.0", features = ["derive"] }
# serde_json: JSON形式のデータファイル読み込み用
serde_json = "1.0"
# serde_yaml: YAML形式のデータファイル読み込み用
serde_yaml = "0.9"
# once_cell: ランタイム一回初期化用キャッシュ
once_cell = "1.19"
# anyhow: 簡易エラー管理用（オプション）
anyhow = "1.0"
# duct: 外部コマンド実行用
duct = "0.13"
# eframe: egui のネイティブデスクトップバックエンド（gui-a で使用）
eframe = "0.31"
# iced: Elm architecture GUI framework (gui-b で使用)
iced = "0.13"
slint = "1.16.1"
# winit: 低レベルなウィンドウイベントループ（gui-d で使用）
winit = "0.30.13"
# softbuffer: CPU で描いたピクセルバッファをウィンドウへ転送（gui-d で使用）
softbuffer = "0.4.8"
# gtk4: ネイティブ GTK4 ウィジェット（gui-e で使用）
gtk4 = "0.10.3"

[build-dependencies]
slint-build = "1.16.1"
